--- a/src/about-me.html
+++ b/src/about-me.html
@@ -18,115 +18,135 @@
             rel="icon"
             href="assets/dota2_93574.svg"
         />
-
         <title>About Me</title>
     </head>
     <body
-        class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover  "
+        class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover"
     >
-        <div
-            class="grid grid-areas-layout grid-cols-layout grid-rows-layout h-screen"
-        >
-            <header class="grid-in-header font-semibold text-lg">
-                <div class="flex justify-between items-center mt-3.5">
-                    <div
-                        class="ml-5 cursor-pointer flex text-slate-300 items-center gap-3 md:ml-20"
+        <nav class="px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+            <div
+                class="container flex flex-wrap justify-between items-center mx-auto"
+            >
+                <a
+                    href="index.html"
+                    class="flex items-center"
+                >
+                    <img
+                        src="assets/dota2_93574.svg"
+                        class="mr-3 h-6 sm:h-16"
+                        alt="Flowbite Logo"
+                    />
+                    <span
+                        class="self-center text-sm font-semibold whitespace-nowr text-white sm:text-lg"
+                        >DOTA 2</span
                     >
-                        <a
-                            href="index.html"
-                            class="flex items-center gap-3 hover:text-white"
-                        >
-                            <img
-                                src="assets/dota2_93574.svg"
-                                class="w-16 h-16"
-                                alt="logo"
-                            />
-                            <h3 class="hidden md:flex">DOTA 2</h3>
-                        </a>
-                    </div>
+                </a>
+                <button
+                    data-collapse-toggle="navbar-default"
+                    type="button"
+                    class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden focus:outline-none focus:ring-2 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    aria-controls="navbar-default"
+                    aria-expanded="false"
+                >
+                    <span class="sr-only">Open main menu</span>
+                    <svg
+                        class="w-7 h-7 text-white"
+                        aria-hidden="true"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                            fill-rule="evenodd"
+                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                            clip-rule="evenodd"
+                        ></path>
+                    </svg>
+                </button>
+                <div
+                    class="hidden w-full md:block md:w-auto"
+                    id="navbar-default"
+                >
                     <ul
-                        class="hidden gap-20 mr-20 uppercase cursor-pointer items-center md:flex"
+                        class="flex uppercase flex-col gap-1 p-4 mt-4 md:gap-16 rounded-lg border md:flex-row md:bg-transparent md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 bg-gray-800 border-gray-700"
                     >
                         <li>
                             <a
                                 href="index.html"
-                                class="text-slate-300 hover:text-white"
+                                class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >Home</a
                             >
                         </li>
                         <li>
                             <a
                                 href="heroes.html"
-                                class="text-slate-300 hover:text-white"
+                                class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >Heroes</a
                             >
                         </li>
                         <li>
                             <a
                                 href="#"
-                                class="text-slate-300 hover:text-white underline underline-offset-8 decoration-2 decoration-orange-500"
+                                class="block py-2 pr-4 pl-3 text-lg text-white md:underline md:underline-offset-8 md:decoration-2 md:decoration-orange-500 bg-blue-700 rounded md:bg-transparent md:p-0"
+                                aria-current="page"
                                 >About Me</a
                             >
                         </li>
                     </ul>
-                    <div
-                        class="flex md:hidden flex-1 justify-end cursor-pointer"
-                    >
-                        <i
-                            class="text-2xl text-white mr-5 fa-solid fa-bars"
-                        ></i>
-                    </div>
                 </div>
-            </header>
-            <main class="grid-in-main mt-14">
-                <div class="flex flex-col items-center">
-                    <div class="flex flex-col items-center gap-3">
-                        <h1
-                            class="text-white tracking-widest font-bold text-3xl"
-                        >
-                            Carl John Manigos
-                        </h1>
-                        <h1 class="text-slate-300 font-normal text-2xl">
-                            Front-End / Software Developer
-                        </h1>
-                    </div>
-                    <div class="mt-10">
-                        <img
-                            class="h-52 w-52 rounded-full"
-                            src="assets/me.jpg"
-                            alt="Me"
-                        />
-                    </div>
-                    <div
-                        class="max-w-xl flex items-center justify-center mt-10 ns:mx-4"
+            </div>
+        </nav>
+
+        <main class="p-0 m-0 mt-8">
+            <div class="flex flex-col items-center">
+                <div class="flex flex-col items-center gap-3">
+                    <h1
+                        class="text-white tracking-widest font-bold text-3xl"
                     >
-                        <p class="leading-loose text-center text-slate-300 ">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Repellendus qui inventore nobis suscipit,
-                            nostrum placeat voluptas praesentium, beatae sequi
-                            et id minus necessitatibus quis amet modi maxime!
-                        </p>
-                    </div>
-                    <div class="icons mt-12 mb-5 ">
-                        <ul
-                            class="text-white flex items-center justify-center gap-10"
-                        >
-                            <li>
-                                <a href="https://www.facebook.com/crljhnmngs/" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.instagram.com/crljhnmngs/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/crljhnmngs" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/crljhnmngs/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></i></a>
-                            </li>
-                        </ul>
-                    </div>
+                        Carl John Manigos
+                    </h1>
+                    <h1 class="text-slate-300 font-normal text-2xl">
+                        Front-End / Software Developer
+                    </h1>
                 </div>
-            </main>
-        </div>
+                <div class="mt-10">
+                    <img
+                        class="h-52 w-52 rounded-full"
+                        src="assets/me.jpg"
+                        alt="Me"
+                    />
+                </div>
+                <div
+                    class="max-w-xl flex items-center justify-center mt-10 ns:mx-4"
+                >
+                    <p class="leading-loose text-center text-slate-300 ">
+                        Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Repellendus qui inventore nobis suscipit,
+                        nostrum placeat voluptas praesentium, beatae sequi
+                        et id minus necessitatibus quis amet modi maxime!
+                    </p>
+                </div>
+                <div class="icons mt-12 mb-5 ">
+                    <ul
+                        class="text-white flex items-center justify-center gap-10"
+                    >
+                        <li>
+                            <a href="https://www.facebook.com/crljhnmngs/" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/crljhnmngs/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/crljhnmngs" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/crljhnmngs/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </main>
+
+        <script src="../node_modules/flowbite/dist/flowbite.js"></script>
     </body>
 </html>
