--- a/src/heroes.html
+++ b/src/heroes.html
@@ -23,83 +23,132 @@
     <body
         class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover"
     >
-        <div class="grid grid-areas-layout grid-cols-layout grid-rows-layout">
-            <header class="grid-in-header font-semibold text-lg">
-                <div class="flex justify-between items-center mt-3.5">
-                    <div
-                        class="ml-5 cursor-pointer flex text-slate-300 items-center gap-3 md:ml-20"
+        <nav class="px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+            <div
+                class="container flex flex-wrap justify-between items-center mx-auto"
+            >
+                <a
+                    href="index.html"
+                    class="flex items-center"
+                >
+                    <img
+                        src="assets/dota2_93574.svg"
+                        class="mr-3 h-6 sm:h-16"
+                        alt="Flowbite Logo"
+                    />
+                    <span
+                        class="self-center text-sm font-semibold whitespace-nowr text-white sm:text-lg"
+                        >DOTA 2</span
                     >
-                        <a
-                            href="index.html"
-                            class="flex items-center gap-3 hover:text-white"
-                        >
-                            <img
-                                src="assets/dota2_93574.svg"
-                                class="w-16 h-16"
-                                alt="logo"
-                            />
-                            <h3 class="hidden md:flex">DOTA 2</h3>
-                        </a>
-                    </div>
+                </a>
+                <button
+                    data-collapse-toggle="navbar-default"
+                    type="button"
+                    class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden focus:outline-none focus:ring-2 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    aria-controls="navbar-default"
+                    aria-expanded="false"
+                >
+                    <span class="sr-only">Open main menu</span>
+                    <svg
+                        class="w-7 h-7 text-white"
+                        aria-hidden="true"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                            fill-rule="evenodd"
+                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                            clip-rule="evenodd"
+                        ></path>
+                    </svg>
+                </button>
+                <div
+                    class="hidden w-full md:block md:w-auto"
+                    id="navbar-default"
+                >
                     <ul
-                        class="hidden gap-20 mr-20 uppercase cursor-pointer items-center md:flex"
+                        class="flex uppercase flex-col gap-1 p-4 mt-4 md:gap-16 rounded-lg border md:flex-row md:bg-transparent md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 bg-gray-800 border-gray-700"
                     >
                         <li>
                             <a
                                 href="index.html"
-                                class="text-slate-300 hover:text-white"
+                                class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >Home</a
                             >
                         </li>
                         <li>
                             <a
-                                href="heroes.html"
-                                class="text-slate-300 hover:text-white underline underline-offset-8 decoration-2 decoration-orange-500"
+                                href="#"
+                                class="block py-2 pr-4 pl-3 text-lg text-white md:underline md:underline-offset-8 md:decoration-2 md:decoration-orange-500 bg-blue-700 rounded md:bg-transparent md:p-0"
+                                aria-current="page"
                                 >Heroes</a
                             >
                         </li>
                         <li>
                             <a
                                 href="about-me.html"
-                                class="text-slate-300 hover:text-white"
+                                class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >About Me</a
                             >
                         </li>
                     </ul>
-                    <div class="flex md:hidden flex-1 justify-end">
-                        <i
-                            class="text-2xl text-white mr-5 fa-solid fa-bars"
-                        ></i>
-                    </div>
                 </div>
-            </header>
+            </div>
+        </nav>
 
-            <main class="grid-in-main mt-5">
-                <div
-                    id="card"
-                    class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:justify-center ns:items-center ns:mr-6 ns:mt-2 overflow-y-auto h-screen scrollbar-hide"
+        <main class="p-0 m-0">
+            <div
+                id="card"
+                class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:mr-8 overflow-y-auto h-screen scrollbar-hide justify-center"
+            >
+                <!-- <div
+                    class="max-w-card h-card rounded-lg border shadow-m bg-gray-800 border-gray-700 mb-5"
                 >
-                    <!-- <div class="grid grid-cols-4 p-14 gap-6 ml-16">
-                        <div class="max-w-card bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                            <a href="#">
-                                <img class="rounded-t-lg" src="https://api.opendota.com/apps/dota2/images/dota_react/heroes/antimage.png?" alt="" />
-                            </a>
-                            <div class="p-5">
-                                <a href="#">
-                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"></h5>
-                                </a>
-                                <h6 class=" font-semibold text-white">Attack Type:</h6>
-                                <p class="mb-3 font-poppins text-gray-700 ml-14 dark:text-gray-400">Melee</p>
-                                <a href="#" class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                                    Read more
-                                    <svg aria-hidden="true" class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                                </a>
-                            </div>
-                        </div>
-                    </div> -->
-                </div>
-            </main>
-        </div>
+                    <a href="#">
+                        <img
+                            class="rounded-t-lg min-h-picture"
+                            src="assets/axe.jpg"
+                            alt="Hero Image"
+                        />
+                    </a>
+                    <div class="p-5">
+                        <a href="#">
+                            <h5
+                                class="mb-2 text-2xl font-bold tracking-tigh text-white"
+                            >
+                                Axe
+                            </h5>
+                        </a>
+                        <h6 class="font-semibold text-white">Attack Type:</h6>
+                        <p class="mb-3 font-poppins ml-16 text-gray-400">
+                            Test
+                        </p>
+                        <a
+                            href="#"
+                            class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                        >
+                            Read more
+                            <svg
+                                aria-hidden="true"
+                                class="ml-2 -mr-1 w-4 h-4"
+                                fill="currentColor"
+                                viewBox="0 0 20 20"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    fill-rule="evenodd"
+                                    d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"
+                                ></path>
+                            </svg>
+                        </a>
+                    </div>
+                </div> -->
+            </div>
+        </main>
+
+        <script src="../node_modules/flowbite/dist/flowbite.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
