--- a/src/hero-info.html
+++ b/src/hero-info.html
@@ -23,68 +23,89 @@
     <body
         class="font-poppins bg-heroesbg bg-blend-darken bg-no-repeat bg-cover"
     >
-        <div class="grid grid-areas-layout grid-cols-layout grid-rows-layout">
-            <header class="grid-in-header font-semibold text-lg">
-                <div class="flex justify-between items-center mt-3.5">
-                    <div
-                        class="ml-5 cursor-pointer flex text-slate-300 items-center gap-3 md:ml-20"
+        <nav class="px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+            <div
+                class="container flex flex-wrap justify-between items-center mx-auto"
+            >
+                <a
+                    href="index.html"
+                    class="flex items-center"
+                >
+                    <img
+                        src="assets/dota2_93574.svg"
+                        class="mr-3 h-6 sm:h-16"
+                        alt="Flowbite Logo"
+                    />
+                    <span
+                        class="self-center text-sm font-semibold whitespace-nowr text-white sm:text-lg"
+                        >DOTA 2</span
                     >
-                        <a
-                            href="index.html"
-                            class="flex items-center gap-3 hover:text-white"
-                        >
-                            <img
-                                src="assets/dota2_93574.svg"
-                                class="w-16 h-16"
-                                alt="logo"
-                            />
-                            <h3 class="hidden md:flex">DOTA 2</h3>
-                        </a>
-                    </div>
+                </a>
+                <button
+                    data-collapse-toggle="navbar-default"
+                    type="button"
+                    class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden focus:outline-none focus:ring-2 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    aria-controls="navbar-default"
+                    aria-expanded="false"
+                >
+                    <span class="sr-only">Open main menu</span>
+                    <svg
+                        class="w-7 h-7 text-white"
+                        aria-hidden="true"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                            fill-rule="evenodd"
+                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                            clip-rule="evenodd"
+                        ></path>
+                    </svg>
+                </button>
+                <div
+                    class="hidden w-full md:block md:w-auto"
+                    id="navbar-default"
+                >
                     <ul
-                        class="hidden gap-20 mr-20 uppercase cursor-pointer items-center md:flex"
+                        class="flex uppercase flex-col gap-1 p-4 mt-4 md:gap-16 rounded-lg border md:flex-row md:bg-transparent md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 bg-gray-800 border-gray-700"
                     >
                         <li>
                             <a
                                 href="index.html"
-                                class="text-slate-300 hover:text-white"
+                                class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >Home</a
                             >
                         </li>
                         <li>
                             <a
                                 href="heroes.html"
-                                class="text-slate-300 hover:text-white underline underline-offset-8 decoration-2 decoration-orange-500"
+                                class="block py-2 pr-4 pl-3 text-lg text-white md:underline md:underline-offset-8 md:decoration-2 md:decoration-orange-500 bg-blue-700 rounded md:bg-transparent md:p-0"
+                                aria-current="page"
                                 >Heroes</a
                             >
                         </li>
                         <li>
                             <a
                                 href="about-me.html"
-                                class="text-slate-300 hover:text-white"
+                                class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >About Me</a
                             >
                         </li>
                     </ul>
-                    <div
-                        class="flex md:hidden flex-1 justify-end cursor-pointer"
-                    >
-                        <i
-                            class="text-2xl text-white mr-5 fa-solid fa-bars"
-                        ></i>
-                    </div>
                 </div>
-            </header>
+            </div>
+        </nav>
 
-            <main class="grid-in-main mt-9">
+        <main class="p-0 m-0">
+            <div
+                class="flex flex-col items-center overflow-y-auto cardInfo:h-screen scrollbar-hide"
+            >
                 <div
-                    class="flex flex-col items-center overflow-y-auto cardInfo:h-screen scrollbar-hide"
+                    id="info-card"
+                    class="ns:max-w-sm flex h-ch rounded justify-center w-infocard cardInfo:flex-col cardInfo:h-hc cardInfo:w-infocardmdscreen shadow-md bg-gray-800 border-gray-700 mb-3"
                 >
-                    <div
-                        id="info-card"
-                        class="ns:max-w-sm flex h-ch justify-center w-infocard cardInfo:flex-col cardInfo:h-hc cardInfo:w-infocardmdscreen bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700 mb-3"
-                    >
-                        <!-- <div class="image  justify-start w-image ">
+                    <!-- <div class="image  justify-start w-image ">
                                 <a href="#">
                                     <img class="rounded-t-lg w-full h-full" src="https://api.opendota.com/apps/dota2/images/dota_react/heroes/antimage.png?" alt="" />
                                 </a>
@@ -133,32 +154,32 @@
                                         </div>
                                 </div>
                             </div> -->
-                    </div>
-                    <div class="flex justify-center items-center mb-2">
-                        <a
-                            id="back-button"
-                            href="#"
-                            class="inline-flex items-center py-2 px-4 mr-3 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-                        >
-                            <svg
-                                aria-hidden="true"
-                                class="mr-2 w-5 h-5"
-                                fill="currentColor"
-                                viewBox="0 0 20 20"
-                                xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                    fill-rule="evenodd"
-                                    d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
-                                    clip-rule="evenodd"
-                                ></path>
-                            </svg>
-                            Back
-                        </a>
-                    </div>
                 </div>
-            </main>
-        </div>
+                <div class="flex justify-center items-center mb-2">
+                    <a
+                        id="back-button"
+                        href="#"
+                        class="inline-flex items-center py-2 px-4 mr-3 text-sm font-medium rounded-lg border bg-gray-800 border-gray-700 text-gray-400 hover:bg-gray-700 hover:text-white"
+                    >
+                        <svg
+                            aria-hidden="true"
+                            class="mr-2 w-5 h-5"
+                            fill="currentColor"
+                            viewBox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                fill-rule="evenodd"
+                                d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
+                                clip-rule="evenodd"
+                            ></path>
+                        </svg>
+                        Back
+                    </a>
+                </div>
+            </div>
+        </main>
         <script src="hero-info.js"></script>
+        <script src="../node_modules/flowbite/dist/flowbite.js"></script>
     </body>
 </html>
