--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     class="flex items-center"
                 >
                     <img
-                        src="assets/dota2_93574.svg"
+                        src="src/assets/dota2_93574.svg"
                         class="mr-3 h-6 sm:h-16"
                         alt="Flowbite Logo"
                     />
@@ -80,14 +80,14 @@
                         </li>
                         <li>
                             <a
-                                href="heroes.html"
+                                href="src/heroes.html"
                                 class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >Heroes</a
                             >
                         </li>
                         <li>
                             <a
-                                href="about-me.html"
+                                href="src/about-me.html"
                                 class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >About Me</a
                             >
