--- a/src/hero-info.html
+++ b/src/hero-info.html
@@ -28,7 +28,7 @@
                 class="container flex flex-wrap justify-between items-center mx-auto"
             >
                 <a
-                    href="index.html"
+                    href="../index.html"
                     class="flex items-center"
                 >
                     <img
@@ -72,7 +72,7 @@
                     >
                         <li>
                             <a
-                                href="index.html"
+                                href="../index.html"
                                 class="block py-2 pr-4 pl-3 text-lg rounded md:hover:bg-transparent md:border-0 md:p-0 text-slate-300 md:hover:text-white hover:bg-gray-700 hover:text-white"
                                 >Home</a
                             >
