--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         />
         <link
             rel="icon"
-            href="assets/dota2_93574.svg"
+            href="../assets/dota2_93574.svg"
         />
         <title>Dota 2</title>
     </head>
