--- a/index.html
+++ b/index.html
@@ -96,6 +96,6 @@
                 </div>
             </div>
         </nav>
-        <script src="node_modules/flowbite/dist/flowbite.js"></script>
+        <script src="../node_modules/flowbite/dist/flowbite.js"></script>
     </body>
 </html>
