--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1.0"
         />
         <link
-            href="/public/output.css"
+            href="public/output.css"
             rel="stylesheet"
         />
         <link
@@ -96,6 +96,6 @@
                 </div>
             </div>
         </nav>
-        <script src="node_modules/flowbite/dist/flowbite.js"></script>
+        <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
     </body>
 </html>
