--- a/src/about-me.html
+++ b/src/about-me.html
@@ -147,6 +147,6 @@
             </div>
         </main>
 
-        <script src="../node_modules/flowbite/dist/flowbite.js"></script>
+        <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
     </body>
 </html>
