--- a/src/hero-info.html
+++ b/src/hero-info.html
@@ -180,6 +180,6 @@
             </div>
         </main>
         <script src="hero-info.js"></script>
-        <script src="../node_modules/flowbite/dist/flowbite.js"></script>
+        <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
     </body>
 </html>
