--- a/src/heroes.html
+++ b/src/heroes.html
@@ -148,7 +148,7 @@
             </div>
         </main>
 
-        <script src="../node_modules/flowbite/dist/flowbite.js"></script>
+        <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
