--- a/src/about-me.html
+++ b/src/about-me.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1.0"
         />
         <link
-            href="/public/output.css"
+            href="../public/output.css"
             rel="stylesheet"
         />
         <link
