--- a/src/hero-info.html
+++ b/src/hero-info.html
@@ -103,7 +103,7 @@
             >
                 <div
                     id="info-card"
-                    class="ns:max-w-sm flex h-ch rounded justify-center w-infocard cardInfo:flex-col cardInfo:h-hc cardInfo:w-infocardmdscreen shadow-md bg-gray-800 border-gray-700 mb-3"
+                    class="ns:max-w-sm flex h-ch rounded justify-center w-infocard cardInfo:flex-col cardInfo:h-hc cardInfo:w-infocardmdscreen shadow-md bg-gray-800 border-gray-700 mb-3 sm400px:flex sm400px:w-80"
                 >
                     <!-- <div class="image  justify-start w-image ">
                                 <a href="#">
