--- a/src/heroes.html
+++ b/src/heroes.html
@@ -100,7 +100,7 @@
         <main class="p-0 m-0">
             <div
                 id="card"
-                class="grid grid-cols-2 p-14 gap-2 mb-5 ml-16 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-10 ns:gap-3 ns:grid ns:grid-cols-1 ns:mr-8 overflow-y-auto h-screen scrollbar-hide justify-center"
+                class="grid grid-cols-2 p-14 ml-14 gap-2 mb-5 lg:grid lg:grid-cols-4 lg:p-14 lg:gap-2 lg:ml-10 ns:p-3 ns:flex ns:flex-col ns:items-center overflow-y-auto h-screen scrollbar-hide"
             >
                 <!-- <div
                     class="max-w-card h-card rounded-lg border shadow-m bg-gray-800 border-gray-700 mb-5"
