--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img
                         src="src/assets/dota2_93574.svg"
                         class="mr-3 h-6 sm:h-16"
-                        alt="Flowbite Logo"
+                        alt="Logo"
                     />
                     <span
                         class="self-center text-sm font-semibold whitespace-nowr text-white sm:text-lg"
